Try to use `read` in `contexts` module

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -131,7 +131,7 @@
     "import html2text\n",
     "import os\n",
     "import requests\n",
-    "\n",
+    "from fastcore.all import delegates\n",
     "import glob\n",
     "import fnmatch\n",
     "import mimetypes\n",
@@ -175,7 +175,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_url(url): return html2md(read_html(url))"
+    "@delegates(to=read_html)\n",
+    "def read_url(url,**kwargs): \n",
+    "    return html2md(read_html(url,**kwargs))"
    ]
   },
   {
