--- a/nbs/01_contexts.ipynb
+++ b/nbs/01_contexts.ipynb
@@ -35,11 +35,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from httpx import get\n",
-    "from playwrightnb import url2md\n",
-    "from functools import partial\n",
-    "from toolslm.download import find_docs, read_docs\n",
-    "from fastcore.all import *"
+    "from ContextKit.read import *"
    ]
   },
   {
@@ -48,8 +44,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def read_gist(s, user): return get(f'https://gist.githubusercontent.com/{user}/{s}').text"
+    "def ctx_head(d): return {k:f\"{v[:50]}...\" for k,v in d.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## nbclassic"
    ]
   },
   {
@@ -60,23 +62,34 @@
    "source": [
     "#| export\n",
     "def nbclassic_server(): \n",
-    "    return {'nbclassic_server': url2md('https://nbclassic.readthedocs.io/en/latest/nbclassic.html','.bd-article')}"
+    "    return {'nbclassic_server': read_url('https://nbclassic.readthedocs.io/en/latest/nbclassic.html',sel='.bd-article')}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nbclassic_server': 'None\\n\\n...'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#| export\n",
-    "def minai():\n",
-    "    ctxs = {'framework':'f242de7c00ace2db18771f9999a2d2fa/raw/73d6367f74d6678b1d1752332e86f110f5dded57',\n",
-    "            'course_nbs': 'a9ac18696ccc8379b7b0a4e0847826cf/raw/77b31753f879e2b9769e1630fad76a4c3936d6da',\n",
-    "            'course_summary': '08684d1aa641ee0686d7b620e66de24c/raw/9290a38676def861aa6fdb7917d6793b3dd67ccd'}\n",
-    "    _fn = bind(read_gist,user='isaac-flath')\n",
-    "    print(\"WARNING: Reading from gists not a dynamic source.\")\n",
-    "    return {k:_fn(v) for k,v in ctxs.items()}"
+    "ctx_head(nbclassic_server())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Docker"
    ]
   },
   {
@@ -92,7 +105,38 @@
     "            'docker_compose_cli':'https://docs.docker.com/reference/cli/docker/compose/',\n",
     "            'dockerd':'https://docs.docker.com/reference/cli/dockerd/',\n",
     "            'dockerhub':'https://docs.docker.com/reference/api/hub/latest/'}\n",
-    "    return {k: url2md(url, '.prose') for kv in ctxs.items}"
+    "    return {k: read_url(v, sel='.prose') for k,v in ctxs.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'compose_file': 'None\\n\\n...',\n",
+       " 'docker_cli': 'None\\n\\n...',\n",
+       " 'docker_compose_cli': 'None\\n\\n...',\n",
+       " 'dockerd': 'None\\n\\n...',\n",
+       " 'dockerhub': 'None\\n\\n...'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx_head(docker())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sqlite"
    ]
   },
   {
@@ -104,11 +148,40 @@
     "#| export\n",
     "def fastlite_sqlutils():\n",
     "    return {\n",
-    "        'fastlite_kw': get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/kw.py').text,\n",
-    "        'fastlite_core': get('https://raw.githubusercontent.com/AnswerDotAI/fastlite/refs/heads/main/fastlite/core.py').text,\n",
-    "        'fastlite_docs': read_docs('https://answerdotai.github.io/fastlite/'),\n",
-    "        'sqlite_utils_docs': url2md('https://sqlite-utils.datasette.io/en/stable/python-api.html','#sqlite-utils-python-library')\n",
+    "        'fastlite_index': read_url('https://answerdotai.github.io/fastlite/index.html.md'),\n",
+    "        'fastlite_core': read_url('https://answerdotai.github.io/fastlite/core.html.md'),\n",
+    "        'sqlite_utils_docs': read_url('https://sqlite-utils.datasette.io/en/stable/python-api.html',\n",
+    "                                      sel='#sqlite-utils-python-library')\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fastlite_index': '# fastlite `fastlite` provides some little quality...',\n",
+       " 'fastlite_core': '# Source ## Metadata ``` python from IPython.displ...',\n",
+       " 'sqlite_utils_docs': 'None\\n\\n...'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx_head(fastlite_sqlutils())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fasthtml"
    ]
   },
   {
@@ -120,9 +193,37 @@
     "#| export\n",
     "def fasthtml():\n",
     "    return {\n",
-    "        'fasthtml_docs': read_docs('https://docs.fastht.ml'),\n",
-    "        'hypermedia_summary': read_gist('d5dc25001d70f5ceb20d115f586662d6/raw/80e427ace28dfc8a576617c5903cc2e12496ba4f','isaac-flath')\n",
+    "        'fasthtml_llms-ctx': read_url('https://docs.fastht.ml/llms-ctx.txt'),\n",
+    "        'hypermedia_summary': read_gist('https://gist.github.com/jph00/4ad7d35ad79013aded41b5ba535a12a3')\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fasthtml_llms-ctx': 'Things to remember when writing FastHTML apps: \\\\\\\\-...',\n",
+       " 'hypermedia_summary': '# Hypermedia Systems: book summary\\n\\nThis is a summ...'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx_head(fasthtml())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fastcore"
    ]
   },
   {
@@ -133,7 +234,34 @@
    "source": [
     "#| export\n",
     "def fastcore(): \n",
-    "    return {'fastcore_docs': read_docs('https://fastcore.fast.ai/')}"
+    "    return {'llms-ctx': read_url('https://fastcore.fast.ai/llms-ctx.txt')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'llms-ctx': 'fastcore adds to Python features inspired by other...'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx_head(fastcore())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## claudette"
    ]
   },
   {
@@ -149,7 +277,29 @@
     "        'core': 'https://claudette.answer.ai/core.html.md',\n",
     "        'toolloop': 'https://claudette.answer.ai/toolloop.html.md'\n",
     "    }\n",
-    "    return {k: get(url).text for k, url in ctxs.items()}"
+    "    return {k: read_url(url) for k, url in ctxs.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'async': '# The async version ## Setup ## Async SDK ``` pyth...',\n",
+       " 'core': '# Claudette’s source This is the ‘literate’ source...',\n",
+       " 'toolloop': \"# Tool loop ``` python import os # os.environ['ANT...\"}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx_head(claudette())"
    ]
   },
   {
