--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -176,8 +176,64 @@
    "source": [
     "#| export\n",
     "@delegates(to=read_html)\n",
-    "def read_url(url,**kwargs): \n",
-    "    return html2md(read_html(url,**kwargs))"
+    "def read_url(url, # url to read\n",
+    "             **kwargs): \n",
+    "    \"Reads a url and converts to markdown\"\n",
+    "    return read_html(url,**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54896f93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/read.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### read_url\n",
+       "\n",
+       ">      read_url (url, sel=None, rm_comments=True, rm_details=True)\n",
+       "\n",
+       "*Reads a url and converts to markdown*\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| url |  |  | url to read |\n",
+       "| sel | NoneType | None | Read only outerHTML of CSS selector `sel` |\n",
+       "| rm_comments | bool | True | Removes HTML comments |\n",
+       "| rm_details | bool | True | Removes `<details>` tags |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/AnswerDotAI/ContextKit/blob/main/ContextKit/read.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### read_url\n",
+       "\n",
+       ">      read_url (url, sel=None, rm_comments=True, rm_details=True)\n",
+       "\n",
+       "*Reads a url and converts to markdown*\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| url |  |  | url to read |\n",
+       "| sel | NoneType | None | Read only outerHTML of CSS selector `sel` |\n",
+       "| rm_comments | bool | True | Removes HTML comments |\n",
+       "| rm_details | bool | True | Removes `<details>` tags |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(read_url)"
    ]
   },
   {
@@ -189,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "'* Home * Learn * __ * __ __ 1\\\\. Get Started * Get Started * Tutorials __ * FastHTML By Example * Web Devs Quickstart * JS App Walkthrough * Explanations __ * **FT** Components * FAQ * MiniDataAPI Spec'"
+       "'  * Home\\n  * Learn\\n\\n  * __\\n  * __\\n\\n__\\n\\n  1. Get Started\\n\\n  * Get Started\\n\\n  * Tutorials __\\n\\n    * FastHTML By Example\\n\\n    * Web Devs Quickstart\\n\\n    * JS App Walkthrough\\n\\n  * Explanations __\\n\\n    * *'"
       ]
      },
      "execution_count": null,
@@ -198,7 +254,7 @@
     }
    ],
    "source": [
-    "read_url('https://docs.fastht.ml/')[:200]"
+    "read_html('https://docs.fastht.ml/')[:200]"
    ]
   },
   {
