--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -179,6 +179,8 @@
     "def read_url(url, # url to read\n",
     "             **kwargs): \n",
     "    \"Reads a url and converts to markdown\"\n",
+    "    # read_html does all we want, pending bug fix in dep\n",
+    "    # https://github.com/AnswerDotAI/toolslm/pull/10\n",
     "    return read_html(url,**kwargs)"
    ]
   },
