--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -785,9 +785,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d190780",
+   "metadata": {},
+   "source": [
+    "### GitHub Repo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ec940333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile, subprocess, os, re, shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def gh_ssh_from_gh_url(gh_url):\n",
+    "    \"GH SSH address from GH URL\"\n",
+    "    pattern = r'https://github\\.com/([^/]+)/([^/]+)(?:/.*)?'\n",
+    "    if match := re.match(pattern, gh_url):\n",
+    "        user, repo = match.groups()\n",
+    "        return f'git@github.com:{user}/{repo}.git'\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid GitHub URL format\")\n",
+    "\n",
+    "def get_default_branch(repo_path):\n",
+    "    \"master or main\"\n",
+    "    try:\n",
+    "        result = subprocess.run(['git', 'symbolic-ref', 'refs/remotes/origin/HEAD'], \n",
+    "                                cwd=repo_path, capture_output=True, text=True, check=True)\n",
+    "        return result.stdout.strip().split('/')[-1]\n",
+    "    except subprocess.CalledProcessError:\n",
+    "        return 'main'  # Default to 'main' if we can't determine the branch\n",
+    "\n",
+    "def get_git_repo(gh_ssh):\n",
+    "    \"Fetchs a GH SSH address, returns its path\"\n",
+    "    repo_name = gh_ssh.split('/')[-1].replace('.git', '')\n",
+    "    cache_dir = Path(os.environ.get('XDG_CACHE_HOME', Path.home() / '.cache')) / 'contextkit_git_clones'\n",
+    "    cache_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    repo_dir = cache_dir / repo_name\n",
+    "\n",
+    "    if repo_dir.exists():\n",
+    "        print(\"Repo already cached. Updating.\")\n",
+    "        try:\n",
+    "            subprocess.run(['git', 'fetch'], cwd=repo_dir, check=True, capture_output=True)\n",
+    "            default_branch = get_default_branch(repo_dir)\n",
+    "            subprocess.run(['git', 'reset', '--hard', f'origin/{default_branch}'], \n",
+    "                           cwd=repo_dir, check=True, capture_output=True)\n",
+    "            return str(repo_dir)\n",
+    "        except subprocess.CalledProcessError:\n",
+    "            shutil.rmtree(repo_dir)  # Remove the cached directory if update fails\n",
+    "\n",
+    "    with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "        try:\n",
+    "            print(\"Cloning repo.\")\n",
+    "            subprocess.run(['git', 'clone', gh_ssh], cwd=temp_dir, check=True, capture_output=False)\n",
+    "            cloned_dir = Path(temp_dir) / repo_name\n",
+    "            shutil.move(str(cloned_dir), str(repo_dir))\n",
+    "            return str(repo_dir)\n",
+    "        except subprocess.CalledProcessError as e:\n",
+    "            print(f\"Error cloning repo from cwd {temp_dir} with error {e}\")\n",
+    "            return None\n",
+    "\n",
+    "def path_from_gh_url(url):\n",
+    "    if sshurl := gh_ssh_from_gh_url(url): return get_git_repo(sshurl)\n",
+    "    else: return None\n",
+    "    \n",
+    "def read_git_path(path):\n",
+    "    # TODO: enhance to read repos more specifically than directories\n",
+    "    return read_dir(path)\n",
+    "\n",
+    "def read_gh_repo(path_or_url):\n",
+    "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
+    "    gh_ssh = None\n",
+    "    if path_or_url.startswith(\"git@github.com\"):\n",
+    "        gh_ssh = path_or_url\n",
+    "    elif path_or_url.startswith(\"https://github.com\"):\n",
+    "        gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
+    "    path = path_or_url if not gh_ssh else get_git_repo(gh_ssh)\n",
+    "    return read_git_path(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2aaea75",
    "metadata": {},
    "outputs": [],
    "source": []
