refactor read_gh_repo()

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -802,14 +802,17 @@
     "import tempfile, subprocess, os, re, shutil\n",
     "from pathlib import Path\n",
     "\n",
-    "def gh_ssh_from_gh_url(gh_url):\n",
-    "    \"GH SSH address from GH URL\"\n",
+    "def gh_ssh_from_gh_url(gh_repo_address):\n",
+    "    \"Given a GH URL or SSH remote address, returns a GH URL or None\"\n",
     "    pattern = r'https://github\\.com/([^/]+)/([^/]+)(?:/.*)?'\n",
-    "    if match := re.match(pattern, gh_url):\n",
+    "    if gh_repo_address.startswith(\"git@github.com:\"):\n",
+    "        return gh_repo_address\n",
+    "    elif match := re.match(pattern, gh_repo_address):\n",
     "        user, repo = match.groups()\n",
     "        return f'git@github.com:{user}/{repo}.git'\n",
     "    else:\n",
-    "        raise ValueError(\"Invalid GitHub URL format\")\n",
+    "        # Not a GitHub URL or a GitHub SSH remote address\n",
+    "        return None\n",
     "\n",
     "def get_default_branch(repo_path):\n",
     "    \"master or main\"\n",
@@ -821,7 +824,7 @@
     "        return 'main'  # Default to 'main' if we can't determine the branch\n",
     "\n",
     "def get_git_repo(gh_ssh):\n",
-    "    \"Fetchs a GH SSH address, returns its path\"\n",
+    "    \"Fetchs from a GH SSH address, returns a path\"\n",
     "    repo_name = gh_ssh.split('/')[-1].replace('.git', '')\n",
     "    cache_dir = Path(os.environ.get('XDG_CACHE_HOME', Path.home() / '.cache')) / 'contextkit_git_clones'\n",
     "    cache_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -849,29 +852,111 @@
     "            print(f\"Error cloning repo from cwd {temp_dir} with error {e}\")\n",
     "            return None\n",
     "\n",
-    "def path_from_gh_url(url):\n",
-    "    if sshurl := gh_ssh_from_gh_url(url): return get_git_repo(sshurl)\n",
-    "    else: return None\n",
-    "    \n",
     "def read_git_path(path):\n",
-    "    # TODO: enhance to read repos more specifically than directories\n",
+    "    # TODO: ?enhance to read repos more specifically than directories\n",
     "    return read_dir(path)\n",
     "\n",
     "def read_gh_repo(path_or_url):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
-    "    gh_ssh = None\n",
-    "    if path_or_url.startswith(\"git@github.com\"):\n",
-    "        gh_ssh = path_or_url\n",
-    "    elif path_or_url.startswith(\"https://github.com\"):\n",
-    "        gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
+    "    gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
     "    path = path_or_url if not gh_ssh else get_git_repo(gh_ssh)\n",
     "    return read_git_path(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "debcf17a",
+   "metadata": {},
+   "source": [
+    "How to use it:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2aaea75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ghurl=\"https://github.com/AnswerDotAI/gemlite\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b347c101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repo already cached. Updating.\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/LICENSE\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/README.md\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/setup.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/examples/benchmark_cuda.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/examples/benchmark_triton.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/examples/cuda_example.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/examples/install_dependencies.sh\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/examples/triton_hqq_example.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/__init__.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/core.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/cuda_kernels/gemlite_lib.cpp\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/cuda_kernels/gemv_A16fWnO16f_int32packing.cu\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/cuda_kernels/gemv_A8iWnO32i_int32packing.cu\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/cuda_kernels/helper.cu\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/__init__.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/gemm_A16fWnO16f_int32packing.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/gemv_A16fWnO16f_int32packing.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/experimental/A16W3_gemm.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/experimental/A16W5_gemm.py\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/gemlite/triton_kernels/experimental/readme.md\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/2bit_gs=128_ 16384x16384_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/2bit_gs=128_ 32768x32768_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/2bit_gs=128_ 4096x4096_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/2bit_gs=128_ 8192x8192_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/4bit_gs=128_ 16384x16384_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/4bit_gs=128_ 32768x32768_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/4bit_gs=128_ 4096x4096_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/4bit_gs=128_ 8192x8192_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/8bit_gs=infeatures_ 16384x16384_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/8bit_gs=infeatures_ 32768x32768_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/8bit_gs=infeatures_ 4096x4096_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/8bit_gs=infeatures_ 8192x8192_4090RTX.svg\n",
+      "Including /home/algal/.cache/contextkit_git_clones/gemlite/images/W3_W5_experimental.svg\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = read_gh_repo(ghurl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f906f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1614109"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1183b88",
    "metadata": {},
    "outputs": [],
    "source": []
